SFQBD/Ebiz/force-app/main/default/objects/Account/fields/Creat_Date__c.field-meta.xml
<CustomField>
    <fullName>Creat_Date__c</fullName>
    <formula>DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Creat Date</label>
    <type>Date</type>
</CustomField>