SFQBD/Ebiz/force-app/main/default/objects/Account/fields/EBizCharge_Account_Tax__c.field-meta.xml
<CustomField>
    <fullName>EBizCharge_Account_Tax__c</fullName>
    <label>EBizCharge Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>