SFQBD/Ebiz/force-app/main/default/objects/Account/fields/EBizCharge_Amount__c.field-meta.xml
<CustomField>
    <fullName>EBizCharge_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>EBizCharge Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>