SFQBD/Ebiz/force-app/main/default/objects/Account/fields/EBizCharge_Internal_ID__c.field-meta.xml
<CustomField>
    <fullName>EBizCharge_Internal_ID__c</fullName>
    <label>EBizCharge Internal ID Account</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>