SFQBD/Ebiz/force-app/main/default/objects/Account/fields/EBizCharge_Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>EBizCharge_Last_Modified_Date__c</fullName>
    <label>EBizCharge Last Modified Date</label>
    <type>DateTime</type>
</CustomField>