SFQBD/Ebiz/force-app/main/default/objects/Account/fields/Gateway_Monthly_Fee__c.field-meta.xml
<CustomField>
    <fullName>Gateway_Monthly_Fee__c</fullName>
    <label>Gateway Monthly Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>