SFQBD/Ebiz/force-app/main/default/objects/Account/fields/Merchant_ID__c.field-meta.xml
<CustomField>
    <fullName>Merchant_ID__c</fullName>
    <label>Merchant ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>