SFQBD/Ebiz/force-app/main/default/objects/Account/fields/QBD_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>QBD_Customer_ID__c</fullName>
    <formula>SUBSTITUTE(
SUBSTITUTE(
LEFT(Name,(40-LEN(Merchant_ID__c)))&amp;&quot;-&quot;&amp;Merchant_ID__c
,&quot;,&quot;,&quot;&quot;)
,&quot;.&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QBD Customer ID</label>
    <type>Text</type>
</CustomField>